feat: first working connection through s3
